# CPP_msu

./: README.md
Task_1/: CMakeLists.txt  README.md  array.cpp  main.cpp  tree.h
Task_2.0/: CMakeLists.txt  main.cpp  tests.cpp
Task_2.0/include/: ICreator.h  TImpl.h  exceptions.h  factory.h  gradient_descent.h  objects.h  options.h
Task_2.0/src/: TImpl.cpp  factory.cpp  objects.cpp
